--- a/index.html
+++ b/index.html
@@ -1895,8 +1895,10 @@ Creamos una plataforma que elimina intermediarios y conecta directamente a más 
     <footer>
         <div class="container">
             <p style="font-weight: 700; font-size: 1.2rem; margin-bottom: 1rem;">Mana-Market</p>
-            <p>Del campo colombiano directo a tu mesa</p>
-            <p>© 2025 Proyecto Académico - Universidad</p>
+            <p>Comprometidos con ofrecer productos frescos, saludables y de origen 100% colombiano.
+Conectamos el trabajo del campo con las familias que valoran la calidad, la sostenibilidad y el sabor natural.</p>
+            <p>© 2025 Mana Market – Todos los derechos reservados.
+Proyecto académico de la Universidad Nacional Abierta y a Distancia (UNAD).</p>
         </div>
     </footer>
 
@@ -2277,3 +2279,4 @@ Creamos una plataforma que elimina intermediarios y conecta directamente a más 
 </body>
 
 </html>
+
