--- a/index.html
+++ b/index.html
@@ -1895,10 +1895,9 @@ Creamos una plataforma que elimina intermediarios y conecta directamente a más 
     <footer>
         <div class="container">
             <p style="font-weight: 700; font-size: 1.2rem; margin-bottom: 1rem;">Mana-Market</p>
-            <p>Comprometidos con ofrecer productos frescos, saludables y de origen 100% colombiano.
-Conectamos el trabajo del campo con las familias que valoran la calidad, la sostenibilidad y el sabor natural.</p>
+            <p>Comprometidos con ofrecer productos frescos, saludables y de origen 100% colombiano.</p>
             <p>© 2025 Mana Market – Todos los derechos reservados.
-Proyecto académico de la Universidad Nacional Abierta y a Distancia (UNAD).</p>
+Proyecto académico(UNAD).</p>
         </div>
     </footer>
 
@@ -2279,4 +2278,5 @@ Proyecto académico de la Universidad Nacional Abierta y a Distancia (UNAD).</p>
 </body>
 
 </html>
+
 
